--- a/app/src/main/res/layout/table_scan_item_layout.xml
+++ b/app/src/main/res/layout/table_scan_item_layout.xml
@@ -17,9 +17,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/tableItemScanLayout"
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_marginStart="@dimen/margin4"
-            android:layout_marginEnd="@dimen/margin4">
+            android:layout_height="0dp">
 
             <TextView
                 android:id="@+id/titleTextView"
