--- a/app/src/main/res/layout/fragment_detail_scan.xml
+++ b/app/src/main/res/layout/fragment_detail_scan.xml
@@ -67,16 +67,6 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/divisionTextView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/margin4"-->
-            <!--                android:textSize="16sp"-->
-            <!--                tools:text="Подразделение" />-->
-
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/divisionTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -86,8 +76,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/division_title"
+                android:visibility="gone"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/ic_baseline_other_division_24">
+                app:startIconDrawable="@drawable/ic_baseline_other_division_24"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/divisionTextView"
@@ -101,14 +93,6 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--            <TextView-->
-            <!--                android:id="@+id/warehouseTextView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/margin4"-->
-            <!--                android:textSize="16sp"-->
-            <!--                tools:text="Склад" />-->
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/warehouseTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -118,16 +102,11 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/warehouse_title"
+                android:visibility="gone"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/ic_baseline_warehouse_24">
+                app:startIconDrawable="@drawable/ic_baseline_warehouse_24"
+                tools:visibility="visible">
 
-                <!--                <com.google.android.material.textfield.TextInputEditText-->
-                <!--                    android:id="@+id/warehouseTextView"-->
-                <!--                    android:layout_width="match_parent"-->
-                <!--                    android:layout_height="wrap_content"-->
-                <!--                    android:imeOptions="actionDone"-->
-                <!--                    android:inputType="text"-->
-                <!--                    android:maxLines="1" />-->
                 <AutoCompleteTextView
                     android:id="@+id/warehouseTextView"
                     android:layout_width="match_parent"
@@ -138,31 +117,6 @@
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--            <TextView-->
-            <!--                android:id="@+id/purposeOfUseTextView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/margin4"-->
-            <!--                android:autoLink="none"-->
-            <!--                android:clickable="true"-->
-            <!--                android:linksClickable="false"-->
-            <!--                android:textSize="16sp"-->
-            <!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
-            <!--                tools:text="Назначение использования" />-->
-
-
-            <!--            <TextView-->
-            <!--                android:id="@+id/phisicalPersonTextView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/margin4"-->
-            <!--                android:autoLink="none"-->
-            <!--                android:clickable="true"-->
-            <!--                android:linksClickable="false"-->
-            <!--                android:textSize="16sp"-->
-            <!--                app:drawableRightCompat="@drawable/ic_baseline_manage_search_24"-->
-            <!--                tools:text="Физическое лицо" />-->
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/physicalPersonTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
@@ -172,8 +126,10 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/physical_person_title"
+                android:visibility="gone"
                 app:errorEnabled="true"
-                app:startIconDrawable="@drawable/ic_baseline_account_circle_24">
+                app:startIconDrawable="@drawable/ic_baseline_account_circle_24"
+                tools:visibility="visible">
 
                 <AutoCompleteTextView
                     android:id="@+id/physicalPersonTextView"
@@ -186,18 +142,6 @@
 
             </com.google.android.material.textfield.TextInputLayout>
 
-            <!--            <TextView-->
-            <!--                android:id="@+id/cellTxtView"-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content"-->
-            <!--                android:layout_margin="@dimen/margin4"-->
-            <!--                android:fontFamily="monospace"-->
-            <!--                android:inputType="textMultiLine"-->
-            <!--                android:textAlignment="viewStart"-->
-            <!--                android:textSize="16sp"-->
-            <!--                android:textStyle="bold"-->
-            <!--                tools:text="Ячейка" />-->
-
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/cellTextInputLayout"
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -207,7 +151,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/header_cell"
-                app:errorEnabled="true">
+                android:visibility="gone"
+                app:errorEnabled="true"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/cellTextView"
@@ -230,54 +176,20 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/nomenclature_title"
-                app:errorEnabled="true">
+                android:visibility="gone"
+                app:errorEnabled="true"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/itemTextView"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
+                    android:editable="false"
                     android:enabled="true"
                     android:imeOptions="actionDone"
-                    android:editable="false"
                     android:inputType="none"
                     android:textStyle="bold" />
             </com.google.android.material.textfield.TextInputLayout>
-
-            <!--            <androidx.constraintlayout.widget.ConstraintLayout-->
-            <!--                android:layout_width="match_parent"-->
-            <!--                android:layout_height="wrap_content">-->
-
-            <!--                <EditText-->
-            <!--                    android:id="@+id/countEditText"-->
-            <!--                    android:layout_width="0dp"-->
-            <!--                    android:layout_height="wrap_content"-->
-            <!--                    android:layout_margin="@dimen/margin4"-->
-            <!--                    android:ems="10"-->
-            <!--                    android:gravity="right"-->
-            <!--                    android:inputType="numberDecimal"-->
-            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                    app:layout_constraintEnd_toStartOf="@id/itemMeasureOfUnitTitleTextView"-->
-            <!--                    app:layout_constraintStart_toStartOf="parent"-->
-            <!--                    app:layout_constraintTop_toTopOf="parent"-->
-            <!--                    tools:text="0.00" />-->
-
-            <!--                <TextView-->
-            <!--                    android:id="@+id/itemMeasureOfUnitTitleTextView"-->
-            <!--                    android:layout_width="wrap_content"-->
-            <!--                    android:layout_height="0dp"-->
-            <!--                    android:layout_margin="@dimen/margin4"-->
-            <!--                    android:gravity="left|center_vertical"-->
-            <!--                    android:paddingBottom="@dimen/margin4"-->
-            <!--                    android:textAlignment="viewStart"-->
-            <!--                    android:textSize="18sp"-->
-            <!--                    app:layout_constraintBottom_toBottomOf="parent"-->
-            <!--                    app:layout_constraintEnd_toEndOf="parent"-->
-            <!--                    app:layout_constraintStart_toEndOf="@id/countEditText"-->
-            <!--                    app:layout_constraintTop_toTopOf="parent"-->
-            <!--                    tools:layout_constraintTop_toTopOf="parent"-->
-            <!--                    tools:text="Ед. изм." />-->
-
-            <!--            </androidx.constraintlayout.widget.ConstraintLayout>-->
 
             <com.google.android.material.textfield.TextInputLayout
                 android:id="@+id/countTextInputLayout"
@@ -288,7 +200,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/quantity_full_text"
-                app:errorEnabled="true">
+                android:visibility="gone"
+                app:errorEnabled="true"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/countEditText"
@@ -311,7 +225,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/quality_text"
-                app:errorEnabled="true">
+                android:visibility="gone"
+                app:errorEnabled="true"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/qualityEditText"
@@ -334,7 +250,9 @@
                 android:layout_marginTop="8dp"
                 android:layout_marginRight="8dp"
                 android:hint="@string/purpose_of_use_title"
-                app:errorEnabled="true">
+                android:visibility="gone"
+                app:errorEnabled="true"
+                tools:visibility="visible">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/purposeOfUseTextView"
@@ -354,7 +272,9 @@
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:text="@string/workwear_ordinary_title"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <CheckBox
                 android:id="@+id/workwearDisposableCheckBox"
@@ -362,7 +282,9 @@
                 android:layout_height="wrap_content"
                 android:enabled="false"
                 android:text="@string/workwear_disposable_title"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:visibility="gone"
+                tools:visibility="visible" />
 
             <TextView
                 android:id="@+id/ownerTextView"
