--- a/app/src/main/res/layout/fragment_table_scan.xml
+++ b/app/src/main/res/layout/fragment_table_scan.xml
@@ -73,7 +73,7 @@
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:background="@color/black"
-        app:layout_constraintBottom_toTopOf="@id/infoTextView"
+        app:layout_constraintBottom_toTopOf="@id/externalDocumentTextView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
 
@@ -89,6 +89,32 @@
         app:layout_constraintTop_toBottomOf="@id/mainMenuFragment" />
 
     <TextView
+        android:id="@+id/externalDocumentTextView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginBottom="4dp"
+        android:background="@drawable/my_border"
+        android:contextClickable="false"
+        android:ellipsize="marquee"
+        android:fontFamily="monospace"
+        android:padding="8dp"
+        android:text="@string/select_document"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@color/light_blue"
+        android:textIsSelectable="false"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:typeface="monospace"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@id/infoTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:visibility="visible" />
+
+    <TextView
         android:id="@+id/infoTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -99,7 +125,7 @@
         android:fontFamily="monospace"
         android:padding="4dp"
         android:textColor="@color/light_blue_900"
-        android:textSize="14sp"
+        android:textSize="12sp"
         android:typeface="monospace"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/documentDetailsImageButton"
@@ -108,13 +134,13 @@
     <ImageButton
         android:id="@+id/documentDetailsImageButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
         android:layout_marginStart="4dp"
         android:layout_marginEnd="4dp"
         android:layout_marginBottom="8dp"
         android:contentDescription="@string/document_details_text"
         android:minHeight="48dp"
-        android:src="@drawable/ic_baseline_assignment_24"
+        android:src="@drawable/ic_baseline_ballot_24"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@id/infoTextView"
@@ -124,8 +150,10 @@
         android:id="@+id/list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginEnd="4dp"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintBottom_toTopOf="@id/infoTextView"
+        app:layout_constraintBottom_toTopOf="@id/divider"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/tableItemScanLayout"
