--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <color name="red_50">#ffe6e6</color>
+    <color name="red_100">#ffcccc</color>
     <color name="red_200">#f19392</color>
     <color name="red_400">#f04142</color>
     <color name="red_700">#d3061f</color>
